# PSP2-CustomBootSplash

./: CMakeLists.txt  README.md  banim.xgif  exports.yml  lbanim.xgif
enso_nologo/3.60/: enso.vpk
enso_nologo/3.60/src/: second.c
enso_nologo/3.65/: enso.vpk
enso_nologo/3.65/src/: second.c
plugin/: CMakeLists.txt  exports.yml  main.c
plugin/kernel/: CMakeLists.txt  main.c
plugin/user/: CMakeLists.txt  theme_settings.xml  user.c  user.yml
src/: main.c
